refactor(ui): remove theme switching functionality
- Remove theme dropdown menu from navigation bar
- Simplify DaisyUI configuration to use only light theme
- Disable dark theme support in Tailwind config
- Clean up navbar end section without theme switcher

--- a/views/layouts/base.njk
+++ b/views/layouts/base.njk
@@ -49,28 +49,7 @@
                     </ul>
                 </div>
                 <div class="navbar-end">
-                    <div class="dropdown dropdown-end">
-                        <div tabindex="0" role="button" class="btn btn-ghost btn-circle">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewbox="0 0 24 24" stroke="currentColor">
-                                <path
-                                    stroke-linecap="round"
-                                    stroke-linejoin="round"
-                                    stroke-width="2"
-                                    d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343
-                                        17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z"/>
-                            </svg>
-                        </div>
-                        <ul
-                            tabindex="0"
-                            class="menu menu-sm dropdown-content bg-base-100 text-base-content rounded-box z-[1] mt-3 w-52 p-2 shadow">
-                            <li>
-                                <a>Light Theme</a>
-                            </li>
-                            <li>
-                                <a>Dark Theme</a>
-                            </li>
-                        </ul>
-                    </div>
+                    <!-- Theme switcher removed -->
                 </div>
             </div>
         {% endblock %}
