forgot to save a change

--- a/views/layouts/base.njk
+++ b/views/layouts/base.njk
@@ -48,8 +48,8 @@
                         </li>
                     </ul>
                 </div>
-                <div class="navbar-end">
-                    <!-- Theme switcher removed -->
+                <div
+                    class="navbar-end"><!-- Theme switcher removed -->
                 </div>
             </div>
         {% endblock %}
