--- a/views/layouts/base.njk
+++ b/views/layouts/base.njk
@@ -57,9 +57,9 @@
             </main>
             {% block footer %}
                 <!-- Daisy UI Footer -->
-                <footer class="footer footer-center p-10 bg-base-200 text-base-content rounded">
+                <footer class="footer footer-center p-10 bg-base-200 text-base-content mt-16">
                     <div>
-                        <p>© 2025 Job Application System. All rights reserved.</p>
+                        <p class="text-sm">© 2025 Job Application System. All rights reserved.</p>
                     </div>
                 </footer>
             {% endblock %}
